edit dropdown css

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -43,6 +43,13 @@ i:hover {
 
 a {
   padding: 0;
+  text-decoration: none;
+  color: black;
+}
+
+#dropdownMenuButton1 {
+  border: none;
+  background: transparent;
 }
 
 
