--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,28 +22,29 @@
               </a>
         </li>
         </ul>
-        <div class="dropdown">
-          <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-2x"></i></button>
+        <div class="btn-group dropstart">
+          <button class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-2x"></i></button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
             <li *ngIf="!loggedin()" class="dropdown-item">
-              <a class="nav-link" routerLinkActive="active" routerLink="/register">Register</a>
+              <a class="nav-link" routerLinkActive="active" routerLink="/register">Rekisteröidy</a>
             </li>
             <li *ngIf="!loggedin()" class="dropdown-item">
-              <a class="nav-link" routerLinkActive="active" routerLink="/login">Login</a>
+              <a class="nav-link" routerLinkActive="active" routerLink="/login">Kirjaudu</a>
             </li>
             <li *ngIf="loggedin()" class="dropdown-item">
-              <a href="/user-info" >My Profile</a>
+              <a href="/user-info" >Profiili</a>
             </li>
             <li *ngIf="loggedin()" class="dropdown-item">
               <a href="/reset-password">
-                Change Password</a>
+                Muuta salasana</a>
             </li>
             <li *ngIf="loggedin()" class="dropdown-item">
               <a href="/favourites" >
-                My Favourites</a>
+                Suosikit</a>
             </li>
+            <li *ngIf="loggedin()"><hr class="dropdown-divider"></li>
             <li *ngIf="loggedin()" class="dropdown-item">
-              <a (click)='onLogout()'>Logout</a>
+              <a (click)='onLogout()'>Kirjaudu ulos</a>
             </li>
           </ul>
         </div>
