edit favorites css

--- a/src/app/favourites/favourites.component.css
+++ b/src/app/favourites/favourites.component.css
@@ -1,11 +1,16 @@
-.otsikko h1{
+h2{
     color: pink;
+    margin-top: 2.5rem;
   }
-  
+
   .card-text {
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+  }
+
+  .container {
+    height: 85vh;
   }
