Remove not!loggedIn

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,10 +25,10 @@
         <div class="btn-group dropstart">
           <button class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-2x"></i></button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li *ngIf="!loggedin()" class="dropdown-item">
+            <li *ngIf="loggedin()" class="dropdown-item">
               <a routerLinkActive="active" routerLink="/register">Rekisteröidy</a>
             </li>
-            <li *ngIf="!loggedin()" class="dropdown-item">
+            <li *ngIf="loggedin()" class="dropdown-item">
               <a routerLinkActive="active" routerLink="/login">Kirjaudu</a>
             </li>
             <li *ngIf="loggedin()" class="dropdown-item">
