--- a/src/app/user-info/user-info.component.css
+++ b/src/app/user-info/user-info.component.css
@@ -47,3 +47,9 @@ a {
   color: black;
   border-color: orange;
 }
+@media only screen and (min-width: 426px) and (max-width: 1023px) {
+
+  .btn.btn-primary.btn-lg {
+    display: none;
+  }
+}
